# gtk-eosledger

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
.github/: ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE
data/: com.github.mparker17.gtk-eosledger.appdata.xml  com.github.mparker17.gtk-eosledger.desktop
debian/: changelog  control  copyright
src/: gtk-eosledger.vala
